--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "connect-mongo": "^1.3.2",
     "cors": "^2.7.1",
     "cron": "^1.2.1",
+    "email-validator": "^2.0.4",
     "express": "^4.14.0",
     "express-flash": "0.0.2",
     "express-jwt": "^5.1.0",
