--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/chunza2542/ywc-api#readme",
   "dependencies": {
+    "babel": "^6.23.0",
     "babel-eslint": "^6.1.2",
     "babel-plugin-transform-runtime": "^6.15.0",
     "bcrypt": "^1.0.3",
@@ -58,6 +59,7 @@
     "winston": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.0.0",
     "babel-cli": "^6.11.4",
     "babel-eslint": "^6.1.2",
     "babel-preset-es2015": "^6.13.2",
