--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,12 +62,12 @@ jobs:
 
 workflows:
   version: 2
-  build_test_deploy:
+  build_deploy:
     jobs:
       - build
       - deploy_to_staging:
         requires:
-          - build_and_test
+          - build
         filters:
           branches:
             only: master
