--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,12 +62,12 @@ jobs:
 
 workflows:
   version: 2
-  build_deploy:
+  build_and_deploy:
     jobs:
       - build
       - deploy_to_staging:
-        requires:
-          - build
-        filters:
-          branches:
-            only: master
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
