--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "babel-eslint": "^6.1.2",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "bcrypt": "^3.0.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "cloudinary": "^1.4.1",
     "compression": "^1.6.2",
