expose port on Docker & Kubernates

--- a/k8s.yml
+++ b/k8s.yml
@@ -6,9 +6,12 @@ spec:
   selector:
     app: ${PROJECT_NAME}
   ports:
-  - protocol: TCP
+  - name: http
     port: 80
     targetPort: 3000
+  - name: https
+    port: 443
+    targetPort: 3443
   type: LoadBalancer
 ---
 apiVersion: apps/v1beta1
