move secret to kubernates

--- a/k8s.yml
+++ b/k8s.yml
@@ -48,3 +48,13 @@ spec:
             secretKeyRef:
               name: secret
               key: jwtsecret
+        - name: PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: secret
+              key: privatekey
+        - name: CERTIFICATE
+          valueFrom:
+            secretKeyRef:
+              name: secret
+              key: certificate
