--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon ./src/bin/server.js --exec babel-node",
     "refactor": "prettier --config prettier.config.js --write \"**/**/*.js\" --ignore-path .prettierignore",
+    "eslint:fix": "eslint -c .eslintrc src/** --fix",
     "build": "./node_modules/babel-cli/bin/babel.js src --out-dir build --source-maps",
     "build:file": "./node_modules/babel-cli/bin/babel src --out-file build/bundle.js --source-maps",
     "build:clean": "rm -rf build"
@@ -21,7 +22,6 @@
   },
   "homepage": "https://github.com/chunza2542/ywc-api#readme",
   "dependencies": {
-    "babel-eslint": "^6.1.2",
     "babel-plugin-transform-runtime": "^6.15.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
@@ -60,12 +60,19 @@
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.0.0",
     "babel-cli": "^6.11.4",
-    "babel-eslint": "^6.1.2",
+    "babel-eslint": "^10.0.1",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-0": "^6.5.0",
-    "eslint": "^3.3.1",
+    "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^5.0.2",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^1.13.0"
+    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "prettier": "^1.15.1"
   }
 }
