--- a/package.json
+++ b/package.json
@@ -58,21 +58,22 @@
     "winston": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
     "@babel/plugin-transform-runtime": "^7.0.0",
     "babel-cli": "^6.11.4",
     "babel-eslint": "^10.0.1",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-0": "^6.5.0",
-    "eslint": "^5.8.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^5.0.2",
     "eslint-config-prettier": "^3.1.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "prettier": "^1.15.1"
+    "prettier": "^1.18.2"
   }
 }
