--- a/package.json
+++ b/package.json
@@ -13,24 +13,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chunza2542/ywc-api.git"
+    "url": "git+https://github.com/webmasterCamp/ywc-api.git"
   },
   "author": "Chun Rapeepat <chunza2542@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/chunza2542/ywc-api/issues"
+    "url": "https://github.com/webmasterCamp/ywc-api/issues"
   },
-  "homepage": "https://github.com/chunza2542/ywc-api#readme",
+  "homepage": "https://github.com/webmasterCamp/ywc-api#readme",
   "dependencies": {
     "babel-plugin-transform-runtime": "^6.15.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.15.2",
-    "cloudinary": "^1.4.1",
     "compression": "^1.6.2",
     "config": "^1.21.0",
-    "connect-mongo": "^1.3.2",
     "cors": "^2.7.1",
-    "cron": "^1.2.1",
     "email-validator": "^2.0.4",
     "express": "^4.14.0",
     "express-flash": "0.0.2",
@@ -38,22 +35,15 @@
     "express-session": "^1.14.0",
     "express-validator": "^2.20.8",
     "fb": "^2.0.0",
-    "html-pdf": "^2.2.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.15.0",
     "lusca": "^1.4.1",
     "mime": "^1.3.4",
-    "mkdirp": "^0.5.1",
     "moment": "^2.15.2",
     "mongoose": "^4.5.9",
     "morgan": "^1.7.0",
-    "multer": "^1.2.0",
-    "papaparse": "^4.3.6",
     "passport": "^0.3.2",
     "passport-facebook-token": "^3.3.0",
-    "randomstring": "^1.1.5",
-    "socket.io": "^2.0.4",
-    "superagent": "^5.1.0",
     "verror": "^1.10.0",
     "winston": "^3.0.0"
   },
@@ -64,7 +54,7 @@
     "babel-eslint": "^10.0.1",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-0": "^6.5.0",
-    "eslint": "^5.16.0",
+    "eslint": "^6.0.0",
     "eslint-config-airbnb-base": "^5.0.2",
     "eslint-config-prettier": "^3.1.0",
     "eslint-config-standard": "^12.0.0",
