--- a/k8s.yml
+++ b/k8s.yml
@@ -2,22 +2,21 @@ kind: Service
 apiVersion: v1
 metadata:
   name: ${PROJECT_NAME}
+  namespace: ywc17-api
 spec:
   selector:
     app: ${PROJECT_NAME}
   ports:
   - name: http
-    port: 80
+    port: 3000
     targetPort: 3000
-  - name: https
-    port: 443
-    targetPort: 3443
   type: LoadBalancer
 ---
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: ${PROJECT_NAME}
+  namespace: ywc17-api
   labels:
     app: ${PROJECT_NAME}
 spec:
@@ -48,13 +47,3 @@ spec:
             secretKeyRef:
               name: secret
               key: jwtsecret
-        - name: PRIVATE_KEY
-          valueFrom:
-            secretKeyRef:
-              name: secret
-              key: privatekey
-        - name: CERTIFICATE
-          valueFrom:
-            secretKeyRef:
-              name: secret
-              key: certificate
