--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
 
       # run tests!
       # - run: yarn test
-  deploy_to_staging:
+  deploy_to_production:
     docker:
       - image: google/cloud-sdk
     environment:
@@ -60,15 +60,56 @@ jobs:
             envsubst < ${HOME}/project/k8s.yml > ${HOME}/patched_k8s.yml
             kubectl apply -f ${HOME}/patched_k8s.yml
             kubectl rollout status deployment/${PROJECT_NAME}
+  deploy_to_staging:
+    docker:
+      - image: google/cloud-sdk
+    environment:
+      - PROJECT_NAME: "ywc17-api"
+      - GOOGLE_PROJECT_ID: "webmastercamp17"
+      - GOOGLE_COMPUTE_ZONE: "asia-southeast1-a"
+      - GOOGLE_CLUSTER_NAME: "ywc-cluster"
+    steps:
+      - checkout
+      - run:
+          name: Setup Google Cloud SDK
+          command: |
+            apt-get install -qq -y gettext
+            echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
+            gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
+            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
+            gcloud --quiet container clusters get-credentials ${GOOGLE_CLUSTER_NAME}
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: Docker build and push
+          command: |
+            docker build \
+              -t ${PROJECT_NAME} .
+            docker tag ${PROJECT_NAME} asia.gcr.io/${GOOGLE_PROJECT_ID}/${PROJECT_NAME}_staging:${CIRCLE_SHA1}
+            gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://asia.gcr.io
+            docker push asia.gcr.io/${GOOGLE_PROJECT_ID}/${PROJECT_NAME}_staging:${CIRCLE_SHA1}
+      - run:
+          name: Deploy to Kubernates
+          command: |
+            envsubst < ${HOME}/project/k8s.staging.yml > ${HOME}/patched_k8s.yml
+            kubectl apply -f ${HOME}/patched_k8s.yml
+            kubectl rollout status deployment/${PROJECT_NAME}
 
 workflows:
   version: 2
   build_and_deploy:
     jobs:
       - build
-      - deploy_to_staging:
+      - deploy_to_production:
           requires:
             - build
           filters:
             branches:
               only: master
+      - deploy_to_staging:
+          requires:
+            - build
+          filters:
+            branches:
+              only: staging
