[skip ci] :ambulance: staging k8s

--- a/k8s.staging.yml
+++ b/k8s.staging.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: ywc17-api
 spec:
   selector:
-    app: ${PROJECT_NAME}
+    app: ${PROJECT_NAME}_staging
   ports:
   - name: http
     port: 3000
