--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,15 +86,15 @@ jobs:
           command: |
             docker build \
               -t ${PROJECT_NAME} .
-            docker tag ${PROJECT_NAME} asia.gcr.io/${GOOGLE_PROJECT_ID}/${PROJECT_NAME}_staging:${CIRCLE_SHA1}
+            docker tag ${PROJECT_NAME} asia.gcr.io/${GOOGLE_PROJECT_ID}/${PROJECT_NAME}-staging:${CIRCLE_SHA1}
             gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://asia.gcr.io
-            docker push asia.gcr.io/${GOOGLE_PROJECT_ID}/${PROJECT_NAME}_staging:${CIRCLE_SHA1}
+            docker push asia.gcr.io/${GOOGLE_PROJECT_ID}/${PROJECT_NAME}-staging:${CIRCLE_SHA1}
       - run:
           name: Deploy to Kubernates
           command: |
             envsubst < ${HOME}/project/k8s.staging.yml > ${HOME}/patched_k8s.yml
             kubectl apply -f ${HOME}/patched_k8s.yml
-            kubectl rollout status deployment/${PROJECT_NAME}
+            kubectl rollout status deployment/${PROJECT_NAME}-staging
 
 workflows:
   version: 2
