--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,7 @@
 {
-  "presets": ["es2015", "stage-0"],
+  "presets": ["@babel/preset-env"],
   "plugins": [
-    ["transform-runtime", {
-      "polyfill": false,
+    ["@babel/plugin-transform-runtime", {
       "regenerator": true
     }]
   ]
