--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "refactor": "prettier --config prettier.config.js --write \"**/**/*.js\" --ignore-path .prettierignore",
     "eslint": "eslint -c .eslintrc src/**",
     "eslint:fix": "yarn run eslint --fix",
-    "build": "./node_modules/babel-cli/bin/babel.js src --out-dir build --source-maps",
+    "build": "babel src --out-dir build --source-maps",
     "build:file": "./node_modules/babel-cli/bin/babel src --out-file build/bundle.js --source-maps",
-    "build:clean": "rm -rf build"
+    "build:clean": "rm -rf build",
+    "test": "NODE_ENV=test jest --verbose ./src",
+    "jest": "jest ."
   },
   "repository": {
     "type": "git",
@@ -29,11 +31,9 @@
   },
   "homepage": "https://github.com/webmasterCamp/ywc-api#readme",
   "dependencies": {
-    "babel-plugin-transform-runtime": "^6.15.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
-    "config": "^1.21.0",
     "cors": "^2.7.1",
     "email-validator": "^2.0.4",
     "express": "^4.14.0",
@@ -43,7 +43,6 @@
     "express-validator": "^2.20.8",
     "fb": "^2.0.0",
     "jsonwebtoken": "^8.3.0",
-    "lodash": "^4.15.0",
     "lusca": "^1.4.1",
     "mime": "^1.3.4",
     "moment": "^2.15.2",
@@ -51,14 +50,18 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-facebook-token": "^3.3.0",
+    "ramda": "^0.26.1",
     "verror": "^1.10.0",
     "winston": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "babel-cli": "^6.11.4",
+    "@babel/cli": "^7.5.0",
+    "@babel/core": "^7.5.4",
+    "@babel/plugin-transform-runtime": "^7.5.0",
+    "@babel/preset-env": "^7.5.4",
+    "@babel/preset-stage-0": "^7.0.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^6.0.0",
@@ -72,6 +75,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^3.0.0",
+    "jest": "^24.8.0",
     "prettier": "^1.18.2"
   }
 }
