--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@babel/plugin-transform-runtime": "^7.5.0",
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-stage-0": "^7.0.0",
+    "@babel/runtime": "^7.5.4",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "babel-preset-es2015": "^6.13.2",
