--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@babel/runtime": "^7.5.4",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^6.0.0",
